--- a/pom.xml
+++ b/pom.xml
@@ -20,28 +20,32 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		
+		<!-- versions -->
+		<spring.version>2.2.0.RELEASE</spring.version>
+		<log4j.version>2.2</log4j.version>
 	</properties>
 
 	<!-- sem se pisou zavislosti -->
+	<!-- aneb co si ma MAven stahnout -->
 	<dependencies>
 		<!-- log4j -->
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
-			<version>2.2</version>
+			<version>${log4j.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
-			<version>2.2</version>
+			<version>${log4j.version}</version>
 		</dependency>
 
 		<!-- jaro ws -->
 		<dependency>
 			<groupId>org.springframework.ws</groupId>
 			<artifactId>spring-ws-core</artifactId>
-			<version>2.2.0.RELEASE</version>
+			<version>${spring.version}</version>
 		</dependency>
-
 	</dependencies>
 </project>
