--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,14 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+			<plugin>
+			      <groupId>com.zenjava</groupId>
+			      <artifactId>javafx-maven-plugin</artifactId>
+			      <version>1.3</version>
+			      <configuration>
+			          <mainClass>[put your application main class here]</mainClass>
+			      </configuration>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -47,5 +55,14 @@
 			<artifactId>spring-ws-core</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
+		
+		<dependency>
+		  <groupId>com.oracle</groupId>
+		  <artifactId>javafx</artifactId>
+		  <version>2.2.3</version>
+		  <scope>system</scope>
+		  <systemPath>${project.basedir}/lib/jfxrt.jar</systemPath>
+		</dependency>
 	</dependencies>
+	
 </project>
