Objektový návrh, diagramy, controlsfx dependency
Dokončení objektového návrhu (finalizace, korekce, doplnění info),
diagramy, doplněná dependency, přejmenování balíků.

--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
 	        <version>2.2.9</version>
 	        <scope>runtime</scope>
 	    </dependency>
+	    <dependency>
+			<groupId>org.controlsfx</groupId>
+			<artifactId>controlsfx</artifactId>
+			<version>8.20.8</version>
+		</dependency>
+			    
 	    
 	</dependencies>
 	
